--- a/FetalHeartRate.ipynb
+++ b/FetalHeartRate.ipynb
@@ -276,6 +276,42 @@
     "    # Show the plot\n",
     "    plt.show()\n",
     "\n",
+    "\n",
+    "def display_histogram(id: int, start_minut:float, duration_in_minuts: float, display_mean: bool = True):\n",
+    "\n",
+    "    fhr_full = loadmat(id_to_path[id])['fhr'].ravel()\n",
+    "\n",
+    "    start_idx = int(start_minut*4*60)\n",
+    "    if start_idx<0: \n",
+    "        start_idx+=len(fhr_full)\n",
+    "    start_idx = max(0, start_idx-1)\n",
+    "    end_idx = min( start_idx+1+int(duration_in_minuts*4*60) , len(fhr_full) )\n",
+    "    \n",
+    "    data = fhr_full[start_idx:end_idx]\n",
+    "    #if interpolate_missing_values:        data = interpolate_nans(fhr)\n",
+    "\n",
+    "    \n",
+    "    plt.figure(figsize=(16, 6))  # Increase the width for better horizontal display\n",
+    "\n",
+    "    # Plotting the histogram\n",
+    "    counts, bins, patches = plt.hist(data, bins=30, edgecolor='black', weights=[100/len(data)]*len(data))\n",
+    "    \n",
+    "    # Adding title and labels\n",
+    "    comment = 'sujet sain' if id_to_target[id] == 0 else 'sujet malade'\n",
+    "\n",
+    "    plt.title(\"Histogramme de l'électrocardiogramme\")\n",
+    "    plt.xlabel('Nombre de battements de coeur à la minute')\n",
+    "    plt.ylabel('Fréquence (%)')\n",
+    "\n",
+    "    if display_mean:\n",
+    "        observed_mean = int(moyenne(fhr_full))\n",
+    "        plt.axvline(observed_mean, color='red', linestyle='-', linewidth=2)\n",
+    "        plt.text(observed_mean, plt.ylim()[1]*0.9, f'Moyenne: {observed_mean:.2f}', color='red', ha='center')\n",
+    "    \n",
+    "    # Display the plot\n",
+    "    plt.show()\n",
+    "\n",
+    "\n",
     "def display_electrocardiograms(count:int, start_minut:int, duration_in_minuts: int, label: int, start_id:int = 1, display_mean: bool = True, interpolate_missing_values:bool = True, min_y_value: int = None, max_y_value: int = None):\n",
     "    displayed_count = 0\n",
     "    for idx in range(start_id, start_id+300,1):\n",
@@ -283,9 +319,10 @@
     "        if id_to_target[id] != label:\n",
     "            continue\n",
     "        display_electrocardiogram(id, start_minut, duration_in_minuts, display_mean=display_mean, interpolate_missing_values=interpolate_missing_values, min_y_value=min_y_value, max_y_value=max_y_value)\n",
+    "        display_histogram(id, start_minut, duration_in_minuts, display_mean=display_mean)\n",
     "        displayed_count+= 1\n",
     "        if displayed_count>=count:\n",
-    "            break\n"
+    "            break"
    ]
   },
   {
@@ -303,9 +340,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nombre_a_afficher = 100\n",
-    "start_minut = 0\n",
-    "duration_in_minuts = 120\n",
+    "nombre_a_afficher = 20\n",
+    "start_minut = -60\n",
+    "duration_in_minuts = 60\n",
     "label = 0  #0 pour les sujets sains , 1 pour les sujets malades\n",
     "start_id = 50 # id du 1er élément à afficher\n",
     "\n",
@@ -327,9 +364,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nombre_a_afficher = 100\n",
-    "start_minut = -120\n",
-    "duration_in_minuts = 90\n",
+    "nombre_a_afficher = 20\n",
+    "start_minut = -60\n",
+    "duration_in_minuts = 60\n",
     "label = 1  #0 pour les sujets sains , 1 pour les sujets malades\n",
     "start_id = 50 # id du 1er élément à afficher\n",
     "\n",
@@ -1238,7 +1275,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1252,7 +1289,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
