--- a/FetalHeartRate.ipynb
+++ b/FetalHeartRate.ipynb
@@ -104,13 +104,13 @@
     "    id_to_target[row['ChallengeID']] = row['TrueOutcome']\n",
     "\n",
     "# lecture des battements de coeurs des foetus\n",
-    "id_to_fhr = dict()\n",
+    "id_to_fhr_full = dict()\n",
+    "id_to_fhr_last_hour = dict() #uniquement la dernière heure\n",
     "all_lengths = []\n",
     "for id, path in id_to_path.items():\n",
     "    matlab_file = loadmat(path)\n",
-    "    id_to_fhr[id] = matlab_file['fhr'].flatten()\n",
-    "    # on ne garde que la dernière heure #//?D\n",
-    "    id_to_fhr[id] = id_to_fhr[id][-60*4*60:]\n"
+    "    id_to_fhr_full[id] = matlab_file['fhr'].flatten()\n",
+    "    id_to_fhr_last_hour[id] = copy.copy(id_to_fhr_full[id][-60*4*60:])\n"
    ]
   },
   {
@@ -131,8 +131,8 @@
    "source": [
     "ids = []\n",
     "targets = []\n",
-    "moyenne_full = []\n",
-    "ecart_type_full = []\n",
+    "mean_full = []\n",
+    "std_dev_full = []\n",
     "count_full = []\n",
     "nan_count_full = []\n",
     "Q1_full = []\n",
@@ -140,23 +140,23 @@
     "Q3_full = []\n",
     "interquartile_range_full = []\n",
     "\n",
-    "moyenne_derniere_heure = []\n",
-    "ecart_type_derniere_heure = []\n",
-    "count_derniere_heure = []\n",
-    "nan_count_derniere_heure = []\n",
-    "Q1_derniere_heure = []\n",
-    "Q2_derniere_heure = []\n",
-    "Q3_derniere_heure = []\n",
-    "interquartile_range_derniere_heure = []\n",
+    "mean_last_hour = []\n",
+    "std_dev_last_hour = []\n",
+    "count_last_hour = []\n",
+    "nan_count_last_hour = []\n",
+    "Q1_last_hour = []\n",
+    "Q2_last_hour = []\n",
+    "Q3_last_hour = []\n",
+    "interquartile_range_last_hour = []\n",
     "\n",
     "for id in list(id_to_path.keys()):\n",
     "    ids.append(id)\n",
     "    targets.append(id_to_target[id])\n",
     "    \n",
-    "    fhr_full = id_to_fhr[id]\n",
+    "    fhr_full = id_to_fhr_full[id]\n",
     "    \n",
-    "    moyenne_full.append(moyenne(fhr_full))\n",
-    "    ecart_type_full.append(ecart_type(fhr_full)) \n",
+    "    mean_full.append(moyenne(fhr_full))\n",
+    "    std_dev_full.append(ecart_type(fhr_full)) \n",
     "    count_full.append(fhr_full.size)\n",
     "    nan_count_full.append(nan_count(fhr_full))\n",
     "    (Q1,Q2,Q3) = compute_quartiles_Q1_Q2_Q3(fhr_full)\n",
@@ -165,38 +165,38 @@
     "    Q3_full.append(Q3)\n",
     "    interquartile_range_full.append(Q3-Q1)\n",
     "    \n",
-    "    fhr_derniere_heure = fhr_full[-elements_en_1heure:]\n",
-    "    moyenne_derniere_heure.append(moyenne(fhr_derniere_heure))\n",
-    "    ecart_type_derniere_heure.append(ecart_type(fhr_derniere_heure)) \n",
-    "    count_derniere_heure.append(fhr_derniere_heure.size)\n",
-    "    nan_count_derniere_heure.append(nan_count(fhr_derniere_heure))\n",
-    "    (Q1,Q2,Q3) = compute_quartiles_Q1_Q2_Q3(fhr_derniere_heure)\n",
-    "    Q1_derniere_heure.append(Q1)\n",
-    "    Q2_derniere_heure.append(Q2)\n",
-    "    Q3_derniere_heure.append(Q3)\n",
-    "    interquartile_range_derniere_heure.append(Q3-Q1)\n",
+    "    fhr_last_hour = id_to_fhr_last_hour[id]\n",
+    "    mean_last_hour.append(moyenne(fhr_last_hour))\n",
+    "    std_dev_last_hour.append(ecart_type(fhr_last_hour)) \n",
+    "    count_last_hour.append(fhr_last_hour.size)\n",
+    "    nan_count_last_hour.append(nan_count(fhr_last_hour))\n",
+    "    (Q1,Q2,Q3) = compute_quartiles_Q1_Q2_Q3(fhr_last_hour)\n",
+    "    Q1_last_hour.append(Q1)\n",
+    "    Q2_last_hour.append(Q2)\n",
+    "    Q3_last_hour.append(Q3)\n",
+    "    interquartile_range_last_hour.append(Q3-Q1)\n",
     "\n",
     "    \n",
     "# Sauvegarde de ces statistiques dans un DataFrame\n",
     "fhr_stats = pd.DataFrame(\n",
     "    {'ids': ids,\n",
     "    'targets': targets,\n",
-    "    'moyenne_full' : moyenne_full,\n",
-    "    'ecart_type_full' : ecart_type_full,\n",
+    "    'mean_full' : mean_full,\n",
+    "    'std_dev_full' : std_dev_full,\n",
     "    'count_full' : count_full,\n",
     "    'nan_count_full' : nan_count_full,\n",
     "    'Q1_full' : Q1_full,\n",
     "    'Q2_full' : Q2_full,\n",
     "    'Q3_full' : Q3_full,\n",
     "    'interquartile_range_full' : interquartile_range_full,\n",
-    "    'moyenne_derniere_heure' : moyenne_derniere_heure,\n",
-    "    'ecart_type_derniere_heure' : ecart_type_derniere_heure,\n",
-    "    'count_derniere_heure' : count_derniere_heure,\n",
-    "    'nan_count_derniere_heure' : nan_count_derniere_heure,\n",
-    "    'Q1_derniere_heure' : Q1_derniere_heure,\n",
-    "    'Q2_derniere_heure' : Q2_derniere_heure,\n",
-    "    'Q3_derniere_heure' : Q3_derniere_heure,\n",
-    "    'interquartile_range_derniere_heure' : interquartile_range_derniere_heure,\n",
+    "    'mean_last_hour' : mean_last_hour,\n",
+    "    'std_dev_last_hour' : std_dev_last_hour,\n",
+    "    'count_last_hour' : count_last_hour,\n",
+    "    'nan_count_last_hour' : nan_count_last_hour,\n",
+    "    'Q1_last_hour' : Q1_last_hour,\n",
+    "    'Q2_last_hour' : Q2_last_hour,\n",
+    "    'Q3_last_hour' : Q3_last_hour,\n",
+    "    'interquartile_range_last_hour' : interquartile_range_last_hour,\n",
     "    })\n",
     "\n",
     "# on sauvegarde ces stats sur le disque\n",
@@ -389,56 +389,44 @@
    "source": [
     "import functools\n",
     "\n",
-    "id_to_data = id_to_fhr\n",
-    "\n",
     "# calcul de l'écart type\n",
     "@functools.lru_cache(maxsize=None)\n",
-    "def compute_id_std_dev(id: int):\n",
-    "    return ecart_type(id_to_data[id])\n",
+    "def compute_id_std_dev_last_hour(id: int):\n",
+    "    return ecart_type(id_to_fhr_last_hour[id])\n",
     "\n",
     "# calcul de la variance\n",
     "@functools.lru_cache(maxsize=None)\n",
-    "def compute_id_variance(id: int):\n",
-    "    std_dev = ecart_type(id_to_data[id])\n",
-    "    return std_dev * std_dev\n",
-    "    \n",
+    "def compute_id_variance_last_hour(id: int) -> float:\n",
+    "    std_dev = compute_id_std_dev_last_hour(id)\n",
+    "    return std_dev*std_dev\n",
+    "\n",
     "# calcul de l'etendue de la séquence associée à l'id 'id' en ignorant les NaN\n",
     "@functools.lru_cache(maxsize=None)\n",
-    "def compute_id_range(id: int):\n",
-    "    data = id_to_data[id]\n",
+    "def compute_id_range_last_hour(id: int):\n",
+    "    data = id_to_fhr_last_hour[id]\n",
     "    return np.nanmax(data)-np.nanmin(data)\n",
-    "   \n",
-    "# calcul de la moyenne de la séquence associée à l'id 'id' en ignorant les NaN\n",
-    "@functools.lru_cache(maxsize=None)\n",
-    "def compute_id_mean(id: int):\n",
-    "    return moyenne(id_to_data[id])\n",
-    "\n",
-    "# calcul des 3 quartiles Q1 , Q2 (=mediane), Q3 de l'id 'id' (en ignorant les NaN)\n",
-    "@functools.lru_cache(maxsize=None)\n",
-    "def compute_id_quartiles_Q1_Q2_Q3(id: int) -> Tuple[float,float,float]:\n",
-    "    return compute_quartiles_Q1_Q2_Q3(id_to_data[id])\n",
     "\n",
     "# calcul de l'écart interquartile (en ignorant les NaN)\n",
     "@functools.lru_cache(maxsize=None)\n",
-    "def compute_id_interquartile_range(id: int) -> float:\n",
-    "    (Q1,Q2,Q3) = compute_id_quartiles_Q1_Q2_Q3(id)\n",
+    "def compute_id_interquartile_range_last_hour(id: int) -> float:\n",
+    "    (Q1,Q2,Q3) = compute_quartiles_Q1_Q2_Q3(id_to_fhr_last_hour[id])\n",
     "    return Q3-Q1\n",
     "\n",
     "# caracteristique 3: sujet sain si l'étendue est inférieure à un seuil.\n",
     "def calcul_caracteristique3(id: int, hyperparameters: dict, suffix: str) -> int:\n",
-    "    return 0 if compute_id_range(id)< hyperparameters['seuil_'+suffix] else 1\n",
+    "    return 0 if compute_id_range_last_hour(id)< hyperparameters['seuil_'+suffix] else 1\n",
     "\n",
     "# caracteristique 7A: sujet sain si l'écart-type est inférieur à un seuil.\n",
     "def calcul_caracteristique7A(id: int, hyperparameters: dict, suffix: str) -> int:\n",
-    "    return 0 if compute_id_std_dev(id) < hyperparameters['seuil_'+suffix] else 1\n",
+    "    return 0 if compute_id_std_dev_last_hour(id) < hyperparameters['seuil_'+suffix] else 1\n",
     "\n",
     "# caracteristique 7C: sujet sain si la variance est inférieure à un seuil.\n",
     "def calcul_caracteristique7C(id: int, hyperparameters: dict, suffix: str) -> int:\n",
-    "    return 0 if compute_id_variance(id) < hyperparameters['seuil_'+suffix] else 1\n",
+    "    return 0 if compute_id_variance_last_hour(id) < hyperparameters['seuil_'+suffix] else 1\n",
     "\n",
     "# caracteristique 15: sujet sain si l'écart interquartile est inférieur à un seuil\n",
     "def calcul_caracteristique15(id: int, hyperparameters: dict, suffix: str) -> int:\n",
-    "    return 0 if compute_id_interquartile_range(id) < hyperparameters['seuil_'+suffix] else 1\n"
+    "    return 0 if compute_id_interquartile_range_last_hour(id) < hyperparameters['seuil_'+suffix] else 1\n"
    ]
   },
   {
@@ -524,7 +512,7 @@
     "\n",
     "def compute_toutes_les_predictions(hyperparameters: dict) -> dict:\n",
     "    id_to_predictions = dict()\n",
-    "    for id in id_to_data.keys():\n",
+    "    for id in id_to_fhr_last_hour.keys():\n",
     "        id_to_predictions[id] = compute_single_prediction(id, hyperparameters)\n",
     "    return id_to_predictions\n",
     "    \n",
@@ -782,8 +770,8 @@
     "def display_stats_etendue():\n",
     "    etendue_target_0 =[]\n",
     "    etendue_target_1 =[]\n",
-    "    for id in id_to_data.keys():\n",
-    "        etendue = compute_id_range(id)\n",
+    "    for id in id_to_fhr_last_hour.keys():\n",
+    "        etendue = compute_id_range_last_hour(id)\n",
     "        if 0 == id_to_target[id]:\n",
     "            etendue_target_0.append(etendue)\n",
     "        else:\n",
@@ -882,8 +870,8 @@
     "def display_stats_std_dev():\n",
     "    std_dev_target_0 =[]\n",
     "    srd_dev_target_1 =[]\n",
-    "    for id in id_to_data.keys():\n",
-    "        std_dev = compute_id_std_dev(id)\n",
+    "    for id in id_to_fhr_last_hour.keys():\n",
+    "        std_dev = compute_id_std_dev_last_hour(id)\n",
     "        if 0 == id_to_target[id]:\n",
     "            std_dev_target_0.append(std_dev)\n",
     "        else:\n",
@@ -993,7 +981,7 @@
     "def display_plot(x_method, x_method_name:str, y_method, y_method_name:str):\n",
     "    label0_coordinates = []\n",
     "    label1_coordinates = []\n",
-    "    for id in id_to_data.keys():\n",
+    "    for id in id_to_fhr_last_hour.keys():\n",
     "        x =x_method(id)\n",
     "        y =y_method(id)\n",
     "        if id_to_target[id] == 0:\n",
@@ -1001,6 +989,7 @@
     "        else:\n",
     "            label1_coordinates.append((x,y))\n",
     "    x_label0, y_label0 = zip(*label0_coordinates)\n",
+    "    plt.figure(figsize=(12, 4))\n",
     "    plt.scatter(x_label0, y_label0, color='green', label='Sains')\n",
     "    x_label1, y_label1 = zip(*label1_coordinates)\n",
     "    plt.scatter(x_label1, y_label1, color='red', label='Malades')\n",
@@ -1011,16 +1000,10 @@
     "    plt.legend()\n",
     "    plt.show()\n",
     "    \n",
-    "@functools.lru_cache(maxsize=None)\n",
-    "def compute_id_variance(id: int) -> float:\n",
-    "    std_dev = compute_id_std_dev(id)\n",
-    "    return std_dev*std_dev\n",
-    "\n",
-    "\n",
-    "caracteristiques = [(compute_id_std_dev, \"Ecart type\"), \n",
-    "                    (compute_id_range, \"Etendue\"),\n",
-    "                    (compute_id_variance, \"Variance\"),\n",
-    "                    (compute_id_interquartile_range, \"Ecart interquartile\")\n",
+    "caracteristiques = [(compute_id_std_dev_last_hour, \"Ecart type\"), \n",
+    "                    (compute_id_range_last_hour, \"Etendue\"),\n",
+    "                    (compute_id_variance_last_hour, \"Variance\"),\n",
+    "                    (compute_id_interquartile_range_last_hour, \"Ecart interquartile\")\n",
     "                   ]\n",
     "\n",
     "for (x_method, x_method_name) in caracteristiques:\n",
@@ -1031,6 +1014,61 @@
     "            continue\n",
     "        display_plot(x_method, x_method_name, y_method, y_method_name)\n",
     "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e721b02-ddaf-46de-8e88-657f0ab1a134",
+   "metadata": {},
+   "source": [
+    "# PRIVE: Affichage de graphiques montrant les sujets sains et les sujets malades en fonction de 2 caractéristiques en prenant toutes les données (pas seulement la dernière heure)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7886041-0908-46f5-b2cc-156a0dd4e274",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# calcul de l'écart type\n",
+    "@functools.lru_cache(maxsize=None)\n",
+    "def compute_id_std_dev_full(id: int):\n",
+    "    return ecart_type(id_to_fhr_full[id])\n",
+    "\n",
+    "# calcul de la variance\n",
+    "@functools.lru_cache(maxsize=None)\n",
+    "def compute_id_variance_full(id: int) -> float:\n",
+    "    std_dev = compute_id_std_dev_full(id)\n",
+    "    return std_dev*std_dev\n",
+    "\n",
+    "# calcul de l'etendue de la séquence associée à l'id 'id' en ignorant les NaN\n",
+    "@functools.lru_cache(maxsize=None)\n",
+    "def compute_id_range_full(id: int):\n",
+    "    data = id_to_fhr_full[id]\n",
+    "    return np.nanmax(data)-np.nanmin(data)\n",
+    "\n",
+    "# calcul de l'écart interquartile (en ignorant les NaN)\n",
+    "@functools.lru_cache(maxsize=None)\n",
+    "def compute_id_interquartile_range_full(id: int) -> float:\n",
+    "    (Q1,Q2,Q3) = compute_quartiles_Q1_Q2_Q3(id_to_fhr_full[id])\n",
+    "    return Q3-Q1\n",
+    "\n",
+    "caracteristiques = [(compute_id_std_dev_full, \"Ecart type\"), \n",
+    "                    (compute_id_range_full, \"Etendue\"),\n",
+    "                    (compute_id_variance_full, \"Variance\"),\n",
+    "                    (compute_id_interquartile_range_full, \"Ecart interquartile\")\n",
+    "                   ]\n",
+    "\n",
+    "for (x_method, x_method_name) in caracteristiques:\n",
+    "    for (y_method, y_method_name) in caracteristiques:\n",
+    "        if x_method_name == y_method_name:\n",
+    "            continue\n",
+    "        if min(x_method_name,y_method_name) == \"Ecart type\" and max(x_method_name,y_method_name) == \"Variance\":\n",
+    "            continue\n",
+    "        display_plot(x_method, x_method_name, y_method, y_method_name)\n",
     "\n"
    ]
   },
@@ -1062,7 +1100,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1076,7 +1114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
