Ajout de la caracteristique 4: sujet sain si le pourcentage de points autour de la moyenne est supérieur à un seuil

--- a/FetalHeartRate.ipynb
+++ b/FetalHeartRate.ipynb
@@ -245,6 +245,7 @@
     "percentage_controversial_to_discard = 1/6\n",
     "\n",
     "\n",
+    "\n",
     "print(f'Initial dataset before removing any controversials elements:')\n",
     "print(f'\\t{create_dataset_stats(id_to_fhr_last_hour)}')\n",
     "    \n",
@@ -412,7 +413,7 @@
     "label = 0  #0 pour les sujets sains , 1 pour les sujets malades\n",
     "start_id =1 # id du 1er élément à afficher\n",
     "\n",
-    "display_electrocardiograms(nombre_a_afficher, start_minut, duration_in_minuts, label, start_id, display_mean=True)"
+    "display_electrocardiograms(nombre_a_afficher, start_minut, duration_in_minuts, label, start_id, display_mean=True, interpolate_missing_values=True)"
    ]
   },
   {
@@ -437,7 +438,7 @@
     "start_id = 1 # id du 1er élément à afficher\n",
     "\n",
     "\n",
-    "display_electrocardiograms(nombre_a_afficher, start_minut, duration_in_minuts, label, start_id, display_mean=True)"
+    "display_electrocardiograms(nombre_a_afficher, start_minut, duration_in_minuts, label, start_id, display_mean=True, interpolate_missing_values=True)"
    ]
   },
   {
@@ -456,6 +457,19 @@
    "outputs": [],
    "source": [
     "import functools\n",
+    "\n",
+    "\n",
+    "\n",
+    "@functools.lru_cache(maxsize=None)\n",
+    "def proportion_in_interval_last_hour(id: int, min_value: float, max_value: float) -> float:\n",
+    "    fhr = id_to_fhr_last_hour[id]\n",
+    "    total_points = np.count_nonzero(~np.isnan(fhr))\n",
+    "    if total_points<=0:\n",
+    "        return 0\n",
+    "    total_points_in_interval = np.count_nonzero((fhr > min_value) & (fhr < max_value) )\n",
+    "    return total_points_in_interval/total_points\n",
+    "\n",
+    "\n",
     "\n",
     "# calcul de l'écart type\n",
     "@functools.lru_cache(maxsize=None)\n",
@@ -483,7 +497,19 @@
     "\n",
     "# caracteristique 3: sujet sain si l'étendue est inférieure à un seuil.\n",
     "def calcul_caracteristique3(id: int, hyperparameters: dict, suffix: str) -> int:\n",
-    "    return 0 if compute_id_range_last_hour(id)< hyperparameters['seuil_'+suffix] else 1\n"
+    "    return 0 if compute_id_range_last_hour(id)< hyperparameters['seuil_'+suffix] else 1\n",
+    "\n",
+    "\n",
+    "# calcul de la moyenne de la séquence associée à l'id 'id' en ignorant les NaN\n",
+    "@functools.lru_cache(maxsize=None)\n",
+    "def compute_id_mean_last_hour(id: int):\n",
+    "    return moyenne(id_to_fhr_last_hour[id])\n",
+    "\n",
+    "# 4eme caracteristique: sujet sain si le pourcentage de points autour de la moyenne est supérieur à un seuil.\n",
+    "def calcul_caracteristique4(id: int, hyperparameters: dict, suffix: str) -> int:\n",
+    "    range = hyperparameters['range_'+suffix]\n",
+    "    moyenne = compute_id_mean_last_hour(id)\n",
+    "    return 0 if proportion_in_interval_last_hour(id, moyenne-range, moyenne+range) > hyperparameters['seuil_'+suffix] else 1\n"
    ]
   },
   {
@@ -517,10 +543,11 @@
     "last_time_display_stats_hpo = time.time()\n",
     "\n",
     "def compute_error(TP: int, TN: int, FP: int, FN: int):\n",
-    "    return (compute_error_target0(TP,TN,FP,FN)+compute_error_target1(TP,TN,FP,FN))/2\n",
-    "    #To use 1-accuracy for the error, use the following line:\n",
-    "    #return 1.0-(TP+TN)/(TP+TN+FP+FN)\n",
-    "\n",
+    "    return 1.0-(TP+TN)/(TP+TN+FP+FN)\n",
+    "    # to compute error as : (error(target0)+error(target1)/2 , uncomment following line:\n",
+    "    #return (compute_error_target0(TP,TN,FP,FN)+compute_error_target1(TP,TN,FP,FN))/2\n",
+    "    \n",
+    "    \n",
     "def compute_f1_score(TP: int, TN: int, FP: int, FN: int):\n",
     "    return (2*TP)/(2*TP+FP+FN)\n",
     "        \n",
@@ -680,15 +707,19 @@
     "search_space = {\n",
     "\n",
     "    # caracteristique 1: sujet sain si l'écart type est inférieur à un seuil.\n",
-    "    'seuil_1': hp.choice('seuil_1', float_range(15.0, 25.0, 100)),\n",
+    "    'seuil_1': hp.choice('seuil_1', float_range(15.0, 30.0, 1000)),\n",
     "    \n",
     "    # caracteristique 2: sujet sain si l'écart interquartile est inférieur à un seuil\n",
-    "    'seuil_2': hp.choice('seuil_2', float_range(15, 25, 1000)),\n",
+    "    'seuil_2': hp.choice('seuil_2', float_range(15, 40.0, 1000)),\n",
     "\n",
     "    # caracteristique 3: sujet sain si l'étendue est inférieure à un seuil.\n",
-    "    'seuil_3': hp.choice('seuil_3', float_range(80,160, 1000)),\n",
+    "    'seuil_3': hp.choice('seuil_3', float_range(160,200, 1000)),\n",
+    "    \n",
+    "    # caracteristique 4: sujet sain si le pourcentage de points autour de la moyenne est supérieur à un seuil.\n",
+    "    'range_4': hp.choice('range_4', float_range(10,50)),\n",
+    "    'seuil_4': hp.choice('seuil_4', float_range(0.80, 0.99,100)),\n",
     "\n",
-    "    'caracteristiques_a_utiliser': hp.choice('caracteristiques_a_utiliser', ['1+3']),\n",
+    "    'caracteristiques_a_utiliser': hp.choice('caracteristiques_a_utiliser', ['1']),\n",
     "    'label_si_resultats_differents': hp.choice('label_si_resultats_differents', [0, 1]),\n",
     "}\n",
     "\n",
@@ -954,6 +985,14 @@
    },
    "outputs": [],
    "source": [
+    "# pourcentage de points dans l'intervalle [moyenne-32.8, moyenne+32.8]\n",
+    "# ce 32.8 a été choisi par une hyper parameter search \n",
+    "@functools.lru_cache(maxsize=None)\n",
+    "def proportion_around_mean_last_hour(id: int) -> float:\n",
+    "    moyenne = compute_id_mean_last_hour(id)\n",
+    "    delta = 32.8\n",
+    "    return 100*proportion_in_interval_last_hour(id, moyenne-delta, moyenne+delta)\n",
+    "\n",
     "\n",
     "def display_plot(x_method, x_method_name:str, y_method, y_method_name:str):\n",
     "    label0_coordinates = []\n",
@@ -979,16 +1018,15 @@
     "    \n",
     "caracteristiques = [(compute_id_std_dev_last_hour, \"Ecart type\"), \n",
     "                    (compute_id_range_last_hour, \"Etendue\"),\n",
-    "                    (compute_id_interquartile_range_last_hour, \"Ecart interquartile\")\n",
+    "                    (compute_id_interquartile_range_last_hour, \"Ecart interquartile\"),\n",
+    "                    (proportion_around_mean_last_hour, \"% autour de la moyenne\"),\n",
     "                   ]\n",
     "\n",
     "for (x_method, x_method_name) in caracteristiques:\n",
     "    for (y_method, y_method_name) in caracteristiques:\n",
     "        if x_method_name == y_method_name:\n",
     "            continue            \n",
-    "        display_plot(x_method, x_method_name, y_method, y_method_name)\n",
-    "\n",
-    "\n"
+    "        display_plot(x_method, x_method_name, y_method, y_method_name)\n"
    ]
   },
   {
