--- a/FetalHeartRate.ipynb
+++ b/FetalHeartRate.ipynb
@@ -56,9 +56,21 @@
     "def moyenne(fhr):\n",
     "    return fhr[~np.isnan(fhr)].mean()\n",
     "\n",
+    "# calcule la médiane de la séquence ''fhr' en ignorant les NaN\n",
+    "def mediane(fhr):\n",
+    "    return np.nanmedian(fhr)\n",
+    "\n",
     "# calcule la std dev de la séquence ''fhr' en ignorant les NaN\n",
     "def ecart_type(fhr):\n",
     "    return fhr[~np.isnan(fhr)].std()\n",
+    "\n",
+    "def proportion_in_interval(fhr, min_value: float, max_value: float) -> float:\n",
+    "    total_points = np.count_nonzero(~np.isnan(fhr))\n",
+    "    if total_points<=0:\n",
+    "        return 0\n",
+    "    total_points_in_interval = np.count_nonzero((fhr > min_value) & (fhr < max_value) )\n",
+    "    return total_points_in_interval/total_points\n",
+    "\n",
     "\n",
     "# calcul des 3 quartiles Q1 , Q2 (=mediane), Q3 (en ignorant les NaN)\n",
     "def compute_quartiles_Q1_Q2_Q3(fhr) -> Tuple[float,float,float]:\n",
@@ -146,16 +158,6 @@
    "source": [
     "ids = []\n",
     "targets = []\n",
-    "mean_full = []\n",
-    "std_dev_full = []\n",
-    "count_full = []\n",
-    "nan_count_full = []\n",
-    "Q1_full = []\n",
-    "Q2_full = []\n",
-    "Q3_full = []\n",
-    "interquartile_range_full = []\n",
-    "etendue_full = []\n",
-    "\n",
     "mean_last_hour = []\n",
     "std_dev_last_hour = []\n",
     "count_last_hour = []\n",
@@ -165,23 +167,12 @@
     "Q3_last_hour = []\n",
     "interquartile_range_last_hour = []\n",
     "etendue_last_hour = []\n",
+    "percent_around_mean_last_hour = []\n",
+    "percent_around_median_last_hour = []\n",
     "\n",
     "for id in list(id_to_fhr_last_hour.keys()):\n",
     "    ids.append(id)\n",
     "    targets.append(id_to_target[id])\n",
-    "\n",
-    "    fhr_full = id_to_fhr_full[id]\n",
-    "    mean_full.append(moyenne(fhr_full))\n",
-    "    std_dev_full.append(ecart_type(fhr_full)) \n",
-    "    count_full.append(fhr_full.size)\n",
-    "    nan_count_full.append(nan_count(fhr_full))\n",
-    "    (Q1,Q2,Q3) = compute_quartiles_Q1_Q2_Q3(fhr_full)\n",
-    "    Q1_full.append(Q1)\n",
-    "    Q2_full.append(Q2)\n",
-    "    Q3_full.append(Q3)\n",
-    "    interquartile_range_full.append(Q3-Q1)\n",
-    "    etendue_full.append(compute_range(fhr_full)) \n",
-    "    \n",
     "    fhr_last_hour = id_to_fhr_last_hour[id]\n",
     "    mean_last_hour.append(moyenne(fhr_last_hour))\n",
     "    std_dev_last_hour.append(ecart_type(fhr_last_hour)) \n",
@@ -193,21 +184,16 @@
     "    Q3_last_hour.append(Q3)\n",
     "    interquartile_range_last_hour.append(Q3-Q1)\n",
     "    etendue_last_hour.append(compute_range(fhr_last_hour)) \n",
+    "    mean = moyenne(fhr_last_hour)\n",
+    "    percent_around_mean_last_hour.append(proportion_in_interval(fhr_last_hour, mean-32.8, mean+32.8))\n",
+    "    median = mediane(fhr_last_hour)\n",
+    "    percent_around_median_last_hour.append(proportion_in_interval(fhr_last_hour, median-31.8, median+31.8))\n",
     "\n",
     "    \n",
     "# Sauvegarde de ces statistiques dans un DataFrame\n",
     "fhr_stats = pd.DataFrame(\n",
     "    {'ids': ids,\n",
     "    'targets': targets,\n",
-    "    'mean_full' : mean_full,\n",
-    "    'std_dev_full' : std_dev_full,\n",
-    "    'count_full' : count_full,\n",
-    "    'nan_count_full' : nan_count_full,\n",
-    "    'Q1_full' : Q1_full,\n",
-    "    'Q2_full' : Q2_full,\n",
-    "    'Q3_full' : Q3_full,\n",
-    "    'interquartile_range_full' : interquartile_range_full,\n",
-    "    'etendue_full' : etendue_full,\n",
     "    'mean_last_hour' : mean_last_hour,\n",
     "    'std_dev_last_hour' : std_dev_last_hour,\n",
     "    'count_last_hour' : count_last_hour,\n",
@@ -217,6 +203,8 @@
     "    'Q3_last_hour' : Q3_last_hour,\n",
     "    'interquartile_range_last_hour' : interquartile_range_last_hour,\n",
     "    'etendue_last_hour' : etendue_last_hour,\n",
+    "    'percent_around_mean_last_hour' : percent_around_mean_last_hour,\n",
+    "    'percent_around_median_last_hour' : percent_around_median_last_hour,\n",
     "    })\n",
     "\n",
     "# on sauvegarde ces stats sur le disque\n",
@@ -242,33 +230,36 @@
     "# for instance:\n",
     "#   0.1 means that the 10% of most controversial elements will be discarded\n",
     "#   0.0 means that no controverisal elements will be discarded\n",
+    "\n",
     "percentage_controversial_to_discard = 1/6\n",
-    "\n",
-    "\n",
     "\n",
     "print(f'Initial dataset before removing any controversials elements:')\n",
     "print(f'\\t{create_dataset_stats(id_to_fhr_last_hour)}')\n",
-    "    \n",
-    "# list of all ids labeled as 1 from the most controversial id (a probable label error: it should be label 0) to the least controversial id (label is clearly OK)\n",
-    "controversial_FN = [27,81,274,267,26,196,214,135,270,192,153,172,8,79,161,210,67,188,167,185,250,109,104,103,46,91,57,69,289,150,283,5,14,17,21,47,48,59,68,70,71,87,105,110,123,124,125,141,164,212,213,224,232,241,244,284,290,291,295,297]\n",
-    "controversial_FN = controversial_FN[:int(percentage_controversial_to_discard*len(controversial_FN))]\n",
     "\n",
-    "# list of all ids labeled as 0 from the most controversial id (a probable label error: it should be label 1) to the least controversial id (label is clearly OK)\n",
-    "controversial_FP =[2,12,22,39,56,64,90,98,126,175,205,211,233,234,247,248,268,298,180,272,139,78,170,173,217,49,294,41,166,252,165,31,249,191,186,221,38,43,287,18,269,199,190,193,220,37,187,51,115,52,184,163,145,4,24,245,197,137,282,183,219,106,203,177,157,235,251,117,174,206,144,254,121,169,218,133,108,28,258,181,42,130,33,146,243,171,95,143,131,149,77,200,230,7,114,122,147,99,97,101,20,36,102,132,96,119,138,278,44,32,25,209,263,112,16,34,76,242,276,281,152,207,201,92,53,231,253,288,29,93,179,120,72,62,286,127,277,74,256,225,222,86,178,236,19,158,65,259,89,208,168,140,257,154,50,40,118,58,264,299,54,237,204,195,61,94,84,266,260,1,85,189,226,45,128,134,142,113,9,83,116,279,35,162,159,275,88,55,156,223,100,296,280,80,246,215,271,229,107,160,202,111,63,82,30,60,194,273,300,75,176,15,292,265,227,293,262,148,151,136,239,73,182,66,129,238,3,261,23,6,216,13,155,228,255,198,285,10,11,240]\n",
-    "controversial_FP = controversial_FP[:int(percentage_controversial_to_discard*len(controversial_FP))]\n",
+    "\n",
+    "controversials = [27,81,267,274,192,26,153,126,8,161,298,270,67,167,188,210,185,214,172,135,109,196,79,105,297,104,69,21,64,233,90,211,175,248,78,98,180,139,205,217,22,272,12,250,46,283,103,57,150,91,289,164,290,5,291,110,59,295,68,224,232,284,70,87,124,244,17,71,123,241,213,39,49,268,173,234,2,166,56,294,247,170,41,33,243,181,171,235,102,145,108,97,92,34,133,147,251,230,117,249,252,197,203,43,269,25,245,121,281,207,138,242,220,201,20,144,143,101,44,106,263,278,28,200,114,184,76,218,16,276,149,53,14,47,141,125,48,221,193,165,115,52,31,191,199,253,37,186,187,51,288,163,179,38,282,183,219,287,177,174,18,254,42,99,95,258,122,132,209,24,130,169,32,96,131,4,212,231,190,29,93,137,157,120,72,206,62,286,127,277,74,256,225,146,222,86,178,236,19,158,65,259,89,208,168,77,140,257,154,50,7,40,118,58,264,299,54,237,204,36,195,61,94,84,119,266,260,1,85,189,226,45,128,134,142,113,9,83,116,279,35,162,159,112,275,88,55,156,223,100,296,280,80,246,215,271,229,107,160,152,202,111,63,82,30,60,194,273,300,75,176,15,292,265,227,293,262,148,151,136,239,73,182,66,129,238,3,261,23,6,216,13,155,228,255,198,285,10,11,240]\n",
+    "to_remove_count = [int(percentage_controversial_to_discard*list(id_to_target.values()).count(0)), int(percentage_controversial_to_discard*list(id_to_target.values()).count(1))]\n",
     "\n",
     "#we discard controversial data (with possible invalid label)\n",
-    "for id in controversial_FN+controversial_FP:\n",
-    "    if id not in id_to_fhr_last_hour:\n",
-    "        continue\n",
-    "    del id_to_path[id]\n",
-    "    del id_to_target[id]\n",
-    "    del id_to_fhr_full[id]\n",
-    "    del id_to_fhr_last_hour[id]\n",
+    "for id in controversials:\n",
+    "    if id in id_to_fhr_last_hour and to_remove_count[id_to_target[id]] > 0 :\n",
+    "        to_remove_count[id_to_target[id]] -= 1\n",
+    "        del id_to_path[id]\n",
+    "        del id_to_target[id]\n",
+    "        del id_to_fhr_full[id]\n",
+    "        del id_to_fhr_last_hour[id]\n",
     "\n",
     "print(f'Dataset after removing {round(100*percentage_controversial_to_discard,1)}% of most controversials elements:')\n",
     "print(f'\\t{create_dataset_stats(id_to_fhr_last_hour)}')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "487bf5dc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -458,18 +449,9 @@
    "source": [
     "import functools\n",
     "\n",
-    "\n",
-    "\n",
     "@functools.lru_cache(maxsize=None)\n",
     "def proportion_in_interval_last_hour(id: int, min_value: float, max_value: float) -> float:\n",
-    "    fhr = id_to_fhr_last_hour[id]\n",
-    "    total_points = np.count_nonzero(~np.isnan(fhr))\n",
-    "    if total_points<=0:\n",
-    "        return 0\n",
-    "    total_points_in_interval = np.count_nonzero((fhr > min_value) & (fhr < max_value) )\n",
-    "    return total_points_in_interval/total_points\n",
-    "\n",
-    "\n",
+    "    return proportion_in_interval(id_to_fhr_last_hour[id], min_value, max_value)\n",
     "\n",
     "# calcul de l'écart type\n",
     "@functools.lru_cache(maxsize=None)\n",
@@ -509,7 +491,21 @@
     "def calcul_caracteristique4(id: int, hyperparameters: dict, suffix: str) -> int:\n",
     "    range = hyperparameters['range_'+suffix]\n",
     "    moyenne = compute_id_mean_last_hour(id)\n",
-    "    return 0 if proportion_in_interval_last_hour(id, moyenne-range, moyenne+range) > hyperparameters['seuil_'+suffix] else 1\n"
+    "    return 0 if proportion_in_interval_last_hour(id, moyenne-range, moyenne+range) > hyperparameters['seuil_'+suffix] else 1\n",
+    "\n",
+    "\n",
+    "\n",
+    "# calcul de la médiane de la séquence associée à l'id 'id' en ignorant les NaN\n",
+    "@functools.lru_cache(maxsize=None)\n",
+    "def compute_id_median_last_hour(id: int):\n",
+    "    return mediane(id_to_fhr_last_hour[id])\n",
+    "\n",
+    "# 5eme caracteristique: sujet sain si le pourcentage de points autour de la médiane est supérieur à un seuil.\n",
+    "def calcul_caracteristique5(id: int, hyperparameters: dict, suffix: str) -> int:\n",
+    "    range = hyperparameters['range_'+suffix]\n",
+    "    median = compute_id_mean_last_hour(id)\n",
+    "    return 0 if proportion_in_interval_last_hour(id, median-range, median+range) > hyperparameters['seuil_'+suffix] else 1\n",
+    "\n"
    ]
   },
   {
@@ -525,7 +521,7 @@
    "execution_count": null,
    "id": "04040a0f",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -713,13 +709,17 @@
     "    'seuil_2': hp.choice('seuil_2', float_range(15, 40.0, 1000)),\n",
     "\n",
     "    # caracteristique 3: sujet sain si l'étendue est inférieure à un seuil.\n",
-    "    'seuil_3': hp.choice('seuil_3', float_range(160,200, 1000)),\n",
+    "    'seuil_3': hp.choice('seuil_3', float_range(150,200, 100)),\n",
     "    \n",
     "    # caracteristique 4: sujet sain si le pourcentage de points autour de la moyenne est supérieur à un seuil.\n",
     "    'range_4': hp.choice('range_4', float_range(10,50)),\n",
     "    'seuil_4': hp.choice('seuil_4', float_range(0.80, 0.99,100)),\n",
     "\n",
-    "    'caracteristiques_a_utiliser': hp.choice('caracteristiques_a_utiliser', ['1']),\n",
+    "    # caracteristique 5: sujet sain si le pourcentage de points autour de la médiane est supérieur à un seuil.\n",
+    "    'range_5': hp.choice('range_5', float_range(30,35)),\n",
+    "    'seuil_5': hp.choice('seuil_5', float_range(0.80, 0.90)),\n",
+    "\n",
+    "    'caracteristiques_a_utiliser': hp.choice('caracteristiques_a_utiliser', ['3']),\n",
     "    'label_si_resultats_differents': hp.choice('label_si_resultats_differents', [0, 1]),\n",
     "}\n",
     "\n",
@@ -730,7 +730,7 @@
     "    search_space['caracteristiques_a_utiliser'] =  hp.choice('caracteristiques_a_utiliser', caracteristiques_a_utiliser)\n",
     "\n",
     "\n",
-    "max_evals = 1000\n",
+    "max_evals = 200\n",
     "if len(sys.argv) >=3 and str.isdigit(sys.argv[2]):\n",
     "    print(f'max_evals will be set to {sys.argv[2]}')\n",
     "    max_evals = int(sys.argv[2])\n",
@@ -798,7 +798,7 @@
    "execution_count": null,
    "id": "296c083f",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -807,7 +807,7 @@
     "\n",
     "valeurs_caracteristique = []\n",
     "erreur_caracteristique = []\n",
-    "for seuil_etendue in range(0, 200, 10):\n",
+    "for seuil_etendue in range(120, 200, 10):\n",
     "    config = {'caracteristiques_a_utiliser': '3', 'seuil_3': seuil_etendue}\n",
     "    erreur = train(config, False)['erreur']\n",
     "    valeurs_caracteristique.append(seuil_etendue)\n",
@@ -821,7 +821,7 @@
     "plt.plot(x_dense, y_dense, label='Erreur', color='b')\n",
     "plt.scatter(valeurs_caracteristique, erreur_caracteristique, color='r')\n",
     "plt.gca().tick_params(axis='y', which='major', labelsize=20) \n",
-    "plt.gca().yaxis.set_major_formatter(PercentFormatter(1, decimals=0))\n",
+    "plt.gca().yaxis.set_major_formatter(PercentFormatter(1, decimals=1))\n",
     "plt.xticks(fontsize=20)\n",
     "plt.xlabel(\"Etendue\", fontsize=20)\n",
     "plt.ylabel('Erreur', fontsize=20)\n",
@@ -905,7 +905,7 @@
    "source": [
     "valeurs_caracteristique = []\n",
     "erreur_caracteristique = []\n",
-    "for threshold_ecart_type in range(0,30+1,1):\n",
+    "for threshold_ecart_type in range(0,40+1,1):\n",
     "    config = {'caracteristiques_a_utiliser': '1', 'seuil_1': threshold_ecart_type}\n",
     "    erreur = train(config, False)['erreur']\n",
     "    valeurs_caracteristique.append(threshold_ecart_type)\n",
@@ -943,7 +943,7 @@
    "outputs": [],
    "source": [
     "# l'étudiant devra remplacer le 10 ci dessous\n",
-    "seuil_ecart_type = 10\n",
+    "seuil_ecart_type = 23\n",
     "\n",
     "config = {'caracteristiques_a_utiliser': '1', 'seuil_1': seuil_ecart_type}\n",
     "metrics = train(config, False)\n",
@@ -1018,8 +1018,8 @@
     "    \n",
     "caracteristiques = [(compute_id_std_dev_last_hour, \"Ecart type\"), \n",
     "                    (compute_id_range_last_hour, \"Etendue\"),\n",
-    "                    (compute_id_interquartile_range_last_hour, \"Ecart interquartile\"),\n",
-    "                    (proportion_around_mean_last_hour, \"% autour de la moyenne\"),\n",
+    "                    #(compute_id_interquartile_range_last_hour, \"Ecart interquartile\"),\n",
+    "                    #(proportion_around_mean_last_hour, \"% autour de la moyenne\"),\n",
     "                   ]\n",
     "\n",
     "for (x_method, x_method_name) in caracteristiques:\n",
